# struct-excel

./: .envrc  .gitattributes  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: data-query.md
struct_excel/: main.py  models.py  normalization.py  parser.py  reader.py  transform.py
tests/: test_data.py  test_normalization.py  test_parser.py  test_to_course.py  test_to_enrollment.py  test_to_session.py  test_to_student.py  test_to_supervisor.py
