[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "struct-excel"
version = "1.0.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["struct_excel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

